# Azure-Kinect-Sensor-SDK

docs/: usage.md
examples/: CMakeLists.txt
examples/minerva/: CMakeLists.txt  Frame.h  Frame2.h  keyboard.cpp  keyboard.hpp  main(copy (copy).cpp  main-new.cpp  main.cpp  timer.hpp  utilities (copy).h  utilities(copy2).h  utilities.h
